--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/onboard_logo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/Markwave_logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Animal Kart Dashboard" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/onboard_logo.png" />
+  <meta name="description" content="Markwave Dashboard" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/Markwave_logo.svg" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Animal Kart" />
-  <meta property="og:description" content="Animal Kart Dashboard" />
-  <meta property="og:image" content="%PUBLIC_URL%/onboard_logo.png" />
+  <meta property="og:title" content="Farmvest" />
+  <meta property="og:description" content="Markwave Dashboard" />
+  <meta property="og:image" content="%PUBLIC_URL%/Markwave_logo.svg" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Animal Kart</title>
+  <title>Markwave Dashboard</title>
 </head>
 
 <body>
